[tool.poetry]
name = "opengpt4"
version = "0.1.8"
description = "OpenGPT 3.5/4 is a project aimed at providing practical and user-friendly APIs. The APIs allow for easy integration with various applications, making it simple for developers to incorporate the natural language processing capabilities of GPT into their projects."
authors = []
license = "GPL-3.0"
readme = "README.md"
packages = [{ include = "opengpt"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.28.2"
tls-client = "0.2"
fake-useragent = "1.1.3"
pydantic = "1.10.7"
PyYAML = "6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
